# isic-2024

./: .gitignore  Dockerfile  pyproject.toml
conf/: infer_effnet.yaml  train_effnet.yaml
conf/dir/: dir.yaml
docs/: doc.md  exp.md  overview.md  survey.md
notebook/eda/: 01_EDA.ipynb  02_external_data.ipynb
src/: 01-train.py  01-train_effnet.py  02-infer.py  02-infer_effnet.py  03-train_eva.py  03-train_pseudo.py  04-infer_eva.py  04-infer_pseudo.py  05-train_meta.py  05-train_timm_model.py  06-infer_meta.py  06-infer_timm_model.py  07-train_for_stacking.py  08-infer_for_stacking.py  dataset-metadata.json  main.py  train_gbdt.py
src/conf/: infer.yaml  infer_effnet.yaml  infer_eva.yaml  infer_swin_large.yaml  train.yaml  train_effnet.yaml  train_eva.yaml  train_swin_large.yaml  type.py
src/conf/dir/: dir.yaml
src/conf/model/: CoAtNet.yaml  ConvNeXtXLarge.yaml  EVA02.yaml  EfficientNetB1.yaml  SwinLarge.yaml  ViTBase.yaml
src/datasets/: dataset.py  transforms.py
src/models/: common.py  efficientnet.py  eva.py  eva02.py  functions.py  isic_model.py  leap_model.py  net.py  unet.py
src/modules/: metrics.py  schedulers.py
src/types/: config.py
src/utils/: metrics.py  utils.py
