[tool.poetry]
name = "kaggle"
version = "0.1.0"
description = "Kaggle環境 for me"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

# jupyter
jupyterlab = "4.2.1"
traitlets = "5.9.0"
notebook = "6.5.4"
matplotlib = "3.7.5"

numpy = "1.26.4"
pandas = "2.2.1"
polars = "0.20.31"
pyarrow = "16.1.0"
scikit-learn = "1.2.0"

# exp
wandb = "0.12.9"
hydra-core = "1.3.0"

# GBDT
lightgbm = "4.2.0"
xgboost = "2.0.3"
catboost = "1.2.5"
optuna = "3.6.1"

# Deep
tensorflow = "2.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
